# Corroscope

./: .gitlab-ci.yml  Cargo.toml  README.md  build.rs  deny.toml  flake.nix
.cargo/: ci-config.toml
.github/workflows/: build_binaries.yml
src/: args.rs  conversion.rs  extra_shapes.rs  finite.rs  global_settings.rs  main.rs  ui.rs
src/commonroad_pb/: mod.rs
src/elements/: lanelet.rs  mod.rs  obstacle.rs  ref_path.rs  trajectory.rs
src/elements/trajectory/: log.rs  mod.rs  plot.rs
utils/: convert_pb.py
