[package]
name = "corroscope"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "LGPL-3.0-or-later"
categories = [ "science::robotics", "visualization" ]

[dependencies]
bevy = { version = "^0.11.0", default_features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_winit",
    "wayland",
    "x11",
    "multi-threaded"
    ] }

#bevy_prototype_lyon = "^0.9.0"
bevy_prototype_lyon = { path = "../bevy_prototype_lyon" }

bevy_egui = { version = "^0.21.0", default_features = false, features = [ "manage_clipboard" ] }
bevy_pancam = { version = "0.9", features = [ "bevy_egui" ] }
bevy_mod_picking = { git = "https://github.com/Vrixyz/bevy_mod_picking", branch = "bevy-0.11-compatibility", default_features = false, features = [
    # "backend_egui",
    "backend_raycast",
    "selection",
    ] }

bevy_eventlistener = { git = "https://github.com/aevyrie/bevy_eventlistener.git", branch = "main" }

bevy_framepace = { version = "0.13.3", optional = true }

bevy-inspector-egui = { version = "0.19.0", optional = true, default_features = false }
bevy_editor_pls = { git = "https://github.com/jakobhellermann/bevy_editor_pls.git", branch = "main", optional = true }

bevy_mod_debugdump = { version = "0.8.0", optional = true }

egui = { version = "0.22.0", features = [
    # "mint"
    ] }

mint = "^0.5.9"

lyon_algorithms = "^1"
lyon_path = "^1"

# color-eyre = { version = "0.5", default-features = false }

prost = "0.11.8"

# Not yet used
# petgraph = "0.6.3"

glam = "0.24.1"

csv = "1.2"
serde = "1.0"
# serde_json = "1.0"
miniserde = "0.1.32"

# clap = { version = "4.3.19", features = ["derive"] }
itertools = "0.11.0"
memmap2 = "0.7.1"
futures-lite = "1.13.0"
thingbuf = "0.1.4"
egui_extras = "0.22.0"

colorous = "1.0.12"

rusqlite = { version = "0.29.0", features = ["bundled"] } # , features = ["blob"]

#bevy_polyline = "0.7"
bevy_polyline = { path = "../bevy_polyline" }

# bevy_picking_egui = { git = "https://github.com/Vrixyz/bevy_mod_picking", branch = "bevy-0.11-compatibility", package = "bevy_picking_egui", default_features = false }

#[patch."https://github.com/Vrixyz/bevy_mod_picking"]
#bevy_egui = { version = "^0.21.0"  }

[patch.crates-io]
bevy_mod_raycast = { git = "https://github.com/Vrixyz/bevy_mod_raycast.git", branch = "bevy-0.11-compatibility" }

[build-dependencies]
prost-build = "0.11.8"

[features]
default = [ "framepace" ]
framepace = ["dep:bevy_framepace"]
dynamic_linking = ["bevy/dynamic_linking"]
export_schedule = ["dep:bevy_mod_debugdump"]
debug_picking = ["bevy_mod_picking/debug"]
editor = ["dep:bevy_editor_pls"]
dev = ["dynamic_linking", "editor", "export_schedule", "dep:bevy-inspector-egui", "egui/extra_debug_asserts"]
# inspector = ["bevy-inspector-egui"]

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.dev.package.backtrace]
opt-level = 3

[profile.release.package.naga]
opt-level = "z"

[profile.release.package.naga_oil]
opt-level = "z"

[profile.release.package.aho-corasick]
opt-level = "z"

[profile.release.package.wayland-client]
opt-level = "z"

[profile.release.package.wayland-protocols]
opt-level = "z"

[profile.release.package.smithay-client-toolkit]
opt-level = "z"

[profile.release.package.bevy_window]
opt-level = "z"

[profile.release.package.wgpu-hal]
opt-level = "s"

[profile.release.package.wgpu]
opt-level = "s"

[profile.release.package.bevy_sprite]
opt-level = "s"

[profile.release.package.bevy_render]
opt-level = "s"

[profile.release.package.bevy_ecs]
opt-level = "s"

[profile.release.package.bevy_reflect]
opt-level = "s"

[profile.release.package.bevy_winit]
opt-level = "z"

[profile.release.package.bevy_input]
opt-level = "z"

[profile.release.package.data-encoding]
opt-level = "z"

[profile.release.package.regex-automata]
opt-level = "z"

[profile.release.package.regex-syntax]
opt-level = "z"

[profile.minsize]
inherits = "release"
opt-level = "s"
lto = "thin"

[profile.release]
#strip = true # "symbols"
opt-level = "s"
#lto = true
lto = "thin"
panic = "abort"

[profile.release-with-debuginfo]
inherits = "release"
debug = true
strip = false

