[package]
name = "corroscope"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "LGPL-3.0-or-later"
categories = [ "science::robotics", "visualization" ]

[dependencies]
bevy = { version = "^0.12.0", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_winit",
    "wayland",
    "x11",
    "multi-threaded"
    ] }
bevy_prototype_lyon = "^0.10.0"
bevy_egui = { version = "^0.24.0", default-features = false, features = [ "manage_clipboard" ] }
bevy_pancam = { version = "0.10", features = [ "bevy_egui" ] }
bevy_mod_picking = { version = "0.17.0", default-features = false, features = [
    "backend_egui",
    "backend_raycast",
    "selection",
] }

bevy_eventlistener = "0.6.0"

bevy_framepace = "0.14.1"

bevy-inspector-egui = { version = "0.22.1", optional = true, default-features = false }
bevy_editor_pls = { version = "0.7.0", optional = true }

bevy_mod_debugdump = { version = "0.9.0", optional = true }

egui = { version = "0.24.0", features = [
    "mint",
] }
egui_plot = "0.24.0"

mint = "^0.5.9"

lyon_algorithms = "^1"
lyon_path = "^1"

# color-eyre = { version = "0.5", default-features = false }

bytes = "1"
prost = "0.12.6"

# Not yet used
# petgraph = "0.6.3"

glam = "0.24.1"

csv = "1.3"
serde = "1.0"
serde_json = "1.0"

clap = { version = "4.3.19", features = ["derive"] }
itertools = "0.11.0"
memmap2 = "0.7.1"
futures-lite = "1.13.0"
thingbuf = "0.1.4"
egui_extras = "0.24.0"

colorous = "1.0.12"

[build-dependencies]
prost-build = "0.12.6"

[features]
default = [ "dev" ]
dynamic_linking = ["bevy/dynamic_linking"]
export_schedule = ["dep:bevy_mod_debugdump"]
debug_picking = ["bevy_mod_picking/debug"]
editor = ["dep:bevy_editor_pls"]
inspector = ["bevy-inspector-egui"]
dev = [
    # "dynamic_linking",
    # "bevy/bevy_dev_tools",
    "editor",
    "export_schedule",
    "inspector"
]


# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
# opt-level = "z"
#lto = true
strip = true
lto = "thin"

[profile.release-with-debuginfo]
inherits = "release"
debug = true
strip = false
